fix Extra white space on Media Gallery grid (Not Standalone Media Gallery)

--- a/MediaGalleryUi/view/adminhtml/web/css/source/_module.less
+++ b/MediaGalleryUi/view/adminhtml/web/css/source/_module.less
@@ -40,8 +40,15 @@
         color: @color-media-gallery-buttons-text;
     }
 
+    .masonry-image-grid .no-data-message-container, .masonry-image-grid .error-message-container {
+        left: 50%;
+        margin-right: -50%;
+        position: sticky;
+        top: 50%;
+    }
+    
     .media-gallery-container {
-
+        
         .admin__action-dropdown-wrap._active .admin__action-dropdown-text::after {
             margin-right: 6px;
         }
@@ -245,6 +252,10 @@
         }
 
         .masonry-image-grid {
+            position: relative;
+            display: grid;align-items: first baseline;
+            grid-template-columns: repeat(7, 1fr);
+            justify-content: end;
             margin: 10px 0;
         }
     }
